objects/Protemoi__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Protemoi</relationshipLabel>
        <relationshipName>Protemoi</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Protemoi</relationshipLabel>
        <relationshipName>Protemoi</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Next_action_to_Deepen_Relationship__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Next Action To Deepen Relationship</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>User can select only the Opportunities which are related to above selected Account</inlineHelpText>
        <label>Opportunity</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Opportunity.Account.Id</field>
                <operation>equals</operation>
                <valueField>$Source.Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Protemoi</relationshipLabel>
        <relationshipName>Protemoi</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Path_To_Raving_Fan__c</fullName>
        <label>Path To Raving Fan</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Target</fullName>
                </value>
                <value>
                    <fullName>Acquaintance</fullName>
                </value>
                <value>
                    <fullName>Curious Skeptic</fullName>
                </value>
                <value>
                    <fullName>Solid Working Relationship</fullName>
                </value>
                <value>
                    <fullName>Trusted Advisor</fullName>
                </value>
                <value>
                    <fullName>Raving Fan</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Protemoi_Type__c</fullName>
        <label>Protemoi Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Client or Prospect</fullName>
                </value>
                <value>
                    <fullName>Strong Influencer</fullName>
                </value>
                <value>
                    <fullName>Strategic Partner</fullName>
                </value>
                <value>
                    <fullName>Interesting Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Thinking_Preference__c</fullName>
        <label>Thinking Preference</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Analytical Thinker</fullName>
                </value>
                <value>
                    <fullName>Implementation Oriented Thinker</fullName>
                </value>
                <value>
                    <fullName>Empathetic Thinker</fullName>
                </value>
                <value>
                    <fullName>Visionary Thinker</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Protemoi</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Protemoi ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Protemoi</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>